# artg4tk

./: CMakeLists.txt  MiniManual.txt  README.md  ReconfigureExternals.txt  Usage.txt  geant4make-no-ups.sh
artg4tk/: CMakeLists.txt
artg4tk/Analysis/: CMakeLists.txt  CheckCalorimeterHits_module.cc  CheckCalorimeterHits_module.hh  CheckDRCalorimeterHits_module.cc  CheckDRCalorimeterHits_module.hh  CheckGenParticle_module.cc  CheckGenParticle_module.hh  CheckHits_module.cc  CheckHits_module.hh  CheckInteractions_module.cc  CheckInteractions_module.hh  CheckPhotonHits_module.cc  CheckPhotonHits_module.hh  CheckProtonProduction_module.cc  CheckProtonProduction_module.hh  CheckSimEnergyDepositHit_module.cc  CheckSimEnergyDepositHit_module.hh  CheckTrackerHits_module.cc  CheckTrackerHits_module.hh
artg4tk/Core/: DetectorBase.hh  GeometryBasehh.txt  RunSettingsBase.hh  artg4Main_module.cc
artg4tk/DataProducts/: CMakeLists.txt
artg4tk/DataProducts/EventGenerators/: CMakeLists.txt  GenParticle.cc  GenParticle.hh  GenParticleCollection.hh  PDGCode.hh  classes.h  classes_def.xml
artg4tk/DataProducts/G4DetectorHits/: ArtG4tkParticle.cc  ArtG4tkParticle.hh  ArtG4tkVtx.hh  G4Interaction.hh  classes.h  classes_def.xml
artg4tk/DataProducts/G4ModelConfig/: ArtG4tkModelConfig.cc  ArtG4tkModelConfig.hh  CMakeLists.txt  classes.h  classes_def.xml
artg4tk/EventGenerators/: CMakeLists.txt  EventGenerator_module.cc
artg4tk/ExpDataAccess/: ASCIIRecord.cc  ASCIIRecord.hh  CMakeLists.txt  DoSSiERConnect.cc  DoSSiERConnect.hh  ExpDataAccess.hh  JSON2Data.cc  JSON2Data.hh  VDBConnect.cc  VDBConnect.hh
artg4tk/G4PhysModelParamStudy/: CMakeLists.txt
artg4tk/G4PhysModelParamStudy/AnalysisBase/: AnalyzerWithExpDataBase.cc  AnalyzerWithExpDataBase.hh  CMakeLists.txt  ModelParamAnalyzerBase.cc  ModelParamAnalyzerBase.hh
artg4tk/G4PhysModelParamStudy/AnalysisModules/: AnalyzerEdepTrk_module.cc  AnalyzerHARP_module.cc  AnalyzerIAEA_module.cc  AnalyzerITEP_module.cc  AnalyzerNA49_module.cc  AnalyzerNA61_module.cc  AnalyzerSASM6E_module.cc  CMakeLists.txt
artg4tk/G4PhysModelParamStudy/AnalysisProducts/: BeamThinTargetConfig.cc  BeamThinTargetConfig.hh  RecordChi2.cc  RecordChi2.hh  classes.h  classes_def.xml
artg4tk/G4PhysModelParamStudy/ApplicationModules/: CMakeLists.txt  ModelParamStudyProducer_module.cc  ProcLevelMPVaryProducer_module.cc
artg4tk/G4PhysModelParamStudy/G4Components/: CMakeLists.txt  FTFPWrapper.cc  FTFPWrapper.hh  ModelConfigMapper.cc  ModelConfigMapper.hh  ModelParamStudyGeom.cc  ModelParamStudyGeom.hh  ProcessWrapper.cc  ProcessWrapper.hh
artg4tk/G4PhysModelParamStudy/G4Services/: CMakeLists.txt  PhysModelConfig_service.cc  PhysModelConfig_service.hh  ProcLevelSimSetup_service.cc  ProcLevelSimSetup_service.hh
artg4tk/G4PhysModelParamStudy/RooMUTools/: CMakeLists.txt  RooMUHistSummary_module.cc
artg4tk/G4PhysModelParamStudy/StatAnalysisTools/: CMakeLists.txt  Chi2Calc.cc  Chi2Calc.hh
artg4tk/G4PhysModelParamStudy/fcl/: analysis-bertini-preco-iaea.fcl  analysis-harp-default.fcl  analysis-harp-roomusummary.fcl  analysis-lariat.fcl  analysis-na61.fcl  analysis-proton5GeV-Pb-QGSP_FTF_BERT-bertini-variants.fcl  bertini-preco-add-variant.fcl  ftf-params-process-level-include.fcl  piminus5GeV-Bertini-analysis.fcl  piplus2GeV-LArIAT-QGSP_FTFP_BERT-MscVar.fcl  piplus2GeV-LArIAT-QGSP_FTFP_BERT-add-bertini-rsc1.fcl  piplus2GeV-LArIAT-QGSP_FTFP_BERT-add-bertini-xsc0.1.fcl  piplus2GeV-LArIAT-QGSP_FTFP_BERT-default.fcl  proton3.824GeV-C-ProcLev-bertini-preco-add-LevDens1.fcl  proton3.824GeV-C-ProcLev-bertini-preco.fcl  proton3.824GeV-C-QGSP_FTFP_BERT-add-preco-levdens1.fcl  proton3.824GeV-C-QGSP_FTFP_BERT-add-preco.fcl  proton3.824GeV-C-QGSP_FTFP_BERT-default.fcl  proton31GeV-C-ProcLev-ftfp.fcl  proton5GeV-Bertini-analysis.fcl  proton5GeV-Pb-ProcLev-bertini-default.fcl  proton5GeV-Pb-ProcLev-ftfp.fcl  proton5GeV-Pb-QGSP_FTFP_BERT-add-bertini-rscratio0.75.fcl  proton5GeV-Pb-QGSP_FTFP_BERT-bertini-rscratio0.75.fcl  proton5GeV-Pb-QGSP_FTFP_BERT-bertini-rscratio1.25.fcl  proton5GeV-Pb-QGSP_FTFP_BERT-default.fcl  proton8GeV-Ta-ProcLev-ftfp.fcl  sim-bertini-piminus5GeV.fcl  sim-bertini-proton5GeV.fcl  test-bertini-preco-procL.fcl  test-ftf-na49.fcl  test-ftfp-params-process-level.fcl  test-g4params-default-process-level.fcl  test-g4params-process-level.fcl  test-g4params-producer-add-bertini-rscratio0.75.fcl  test-g4params-producer-default.fcl  test-g4params-producer-rscratio0.75.fcl  test-g4params-producer-rscratio1.25.fcl  test-lariat-add-rsc1.fcl  test-lariat-add-xsc0.1.fcl  (+3 more)
artg4tk/actionBase/: ActionBase.cc  ActionBase.hh  EventActionBase.cc  EventActionBase.hh  PrimaryGeneratorActionBase.cc  PrimaryGeneratorActionBase.hh  RunActionBase.cc  RunActionBase.hh  StackingActionBase.cc  StackingActionBase.hh  SteppingActionBase.cc  SteppingActionBase.hh  TrackingActionBase.cc  TrackingActionBase.hh
artg4tk/geantInit/: ArtG4DetectorConstruction.cc  ArtG4DetectorConstruction.hh  ArtG4EventAction.cc  ArtG4EventAction.hh  ArtG4PrimaryGeneratorAction.cc  ArtG4PrimaryGeneratorAction.hh  ArtG4RunAction.cc  ArtG4RunAction.hh  ArtG4RunManager.cc  ArtG4StackingAction.cc  ArtG4StackingAction.hh  ArtG4SteppingAction.cc  ArtG4SteppingAction.hh  ArtG4TrackingAction.cc  ArtG4TrackingAction.hh  CMakeLists.txt
artg4tk/pluginActions/: CMakeLists.txt
artg4tk/pluginActions/PrimaryEvent/: CMakeLists.txt  PrimaryEventAction_service.cc  PrimaryEventAction_service.hh
artg4tk/pluginActions/general/: CMakeLists.txt  (+2 more)
artg4tk/pluginDetectors/: CMakeLists.txt
artg4tk/services/: ActionHolder_service.cc  ActionHolder_service.hh  CMakeLists.txt  DetectorHolder_service.cc  DetectorHolder_service.hh  Dummy_service.cc  Dummy_service.hh  PhysicsListHolder_service.cc  PhysicsListHolder_service.hh  PhysicsListServiceBase.hh  RunSettings_service.cc  RunSettings_service.hh
artg4tk/util/: CMakeLists.txt  DataFromRunOrService.hh  StringIDs.cc  StringIDs.hh  array_macros.hh  util.cc  util.hh
fcl/: actionDefaults.fcl  (+6 more)
macros/: CMakeLists.txt  vis.mac
ups/: CMakeLists.txt  artg4tk-config.cmake.in  product_deps
(+117 files in other folders)
