# Build these directories
add_subdirectory( geantInit )
add_subdirectory( actionBase )
add_subdirectory( Core )
add_subdirectory( services )
add_subdirectory( pluginActions )
add_subdirectory( pluginDetectors )
add_subdirectory( DataProducts )
add_subdirectory( EventGenerators )
add_subdirectory( Analysis )
add_subdirectory( util )
#
add_subdirectory( ExpDataAccess )
#
add_subdirectory( G4PhysModelParamStudy )


